RESOLVED FIXED205996
Fix various non-unified build issues introduced since r253538
https://bugs.webkit.org/show_bug.cgi?id=205996
Summary Fix various non-unified build issues introduced since r253538
Adrian Perez
Reported 2020-01-09 03:52:09 PST
First set of fixes for non-unified builds in 2020 :-]
Attachments
Patch (7.13 KB, patch)
2020-01-09 07:24 PST, Adrian Perez
no flags
Patch for landing (7.21 KB, patch)
2020-01-09 13:57 PST, Adrian Perez
no flags
Adrian Perez
Comment 1 2020-01-09 07:24:21 PST
Carlos Garcia Campos
Comment 2 2020-01-09 07:30:55 PST
Comment on attachment 387225 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=387225&action=review > Source/JavaScriptCore/ChangeLog:3 > + [GTK][WPE] Fix various non-unified build issues introduced since r253538 Why is this marked GTK and WPE specific?
Adrian Perez
Comment 3 2020-01-09 07:45:53 PST
(In reply to Carlos Garcia Campos from comment #2) > Comment on attachment 387225 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=387225&action=review > > > Source/JavaScriptCore/ChangeLog:3 > > + [GTK][WPE] Fix various non-unified build issues introduced since r253538 > > Why is this marked GTK and WPE specific? Right… no reason whatsoever. Let's remove the tags.
youenn fablet
Comment 4 2020-01-09 08:28:22 PST
Comment on attachment 387225 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=387225&action=review > Source/WebCore/page/PageConfiguration.h:34 > +#include <wtf/text/WTFString.h> Would <wtf/Forward.h> work here?
Adrian Perez
Comment 5 2020-01-09 13:36:58 PST
(In reply to youenn fablet from comment #4) > Comment on attachment 387225 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=387225&action=review > > > Source/WebCore/page/PageConfiguration.h:34 > > +#include <wtf/text/WTFString.h> > > Would <wtf/Forward.h> work here? I'll give that a try, thanks for the suggestion.
Adrian Perez
Comment 6 2020-01-09 13:55:39 PST
(In reply to Adrian Perez from comment #5) > (In reply to youenn fablet from comment #4) > > Comment on attachment 387225 [details] > > Patch > > > > View in context: > > https://bugs.webkit.org/attachment.cgi?id=387225&action=review > > > > > Source/WebCore/page/PageConfiguration.h:34 > > > +#include <wtf/text/WTFString.h> > > > > Would <wtf/Forward.h> work here? > > I'll give that a try, thanks for the suggestion. Yes, using <wtf/Forward.h> instead of <wtf/text/WTFString.h> worked. I'll land a version of the patch with this change applied and the bug title adjusted as per Carlos' suggestion. As there are mentions to files NarrowingNumberPredictionFuzzerAgent.cpp and NarrowingNumberPredictionFuzzerAgent.cpp which contain the string “fuzzer” in them, the style checker complains, so I will land the patch manually after checking that the EWS bots build with the patch fine :)
Adrian Perez
Comment 7 2020-01-09 13:57:03 PST
Created attachment 387269 [details] Patch for landing
Adrian Perez
Comment 8 2020-01-09 22:52:09 PST
Radar WebKit Bug Importer
Comment 9 2020-01-09 22:53:14 PST
Note You need to log in before you can comment on or make changes to this bug.