Fix various non-unified build issues introduced since r253538 https://bugs.webkit.org/show_bug.cgi?id=205996

Reviewed by Youenn Fablet.

Source/JavaScriptCore:

* bytecode/ExecutableToCodeBlockEdge.cpp: Add missing inclusion of JSObjectInlines.h and
StructureInlines.h
* dfg/DFGVariableEvent.cpp: Add missing inclusion of OperandsInlines.h
* runtime/NarrowingNumberPredictionFuzzerAgent.cpp: Add missing inclusion of CodeBlock.h
* runtime/WideningNumberPredictionFuzzerAgent.cpp: Ditto.
* wasm/WasmOperations.cpp: Add missing inclusion of ButterflyInlines.h

Source/WebCore:

No new tests needed.

* dom/UserGestureIndicator.cpp: Add missing inclusion of DOMWindow.h
* html/HTMLDialogElement.cpp:
(WebCore::HTMLDialogElement::parseAttribute): Add missing namespace prefix to HTMLNames::openAttr.
(WebCore::HTMLDialogElement::toggleOpen): Ditto.
* page/Page.cpp: Add missing inclusion of MediaRecorderProvider.h
* page/PageConfiguration.h: Add missing inclusion of wtf/Forward.h and wtf/Vector.h

Canonical link: https://commits.webkit.org/219170@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254327 268f45cc-cd09-0410-ab3c-d52691b4dbfc